<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/detail_image"
                android:src="@drawable/user1" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UselessParent">
            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/item_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tv_detail_username"
                android:text="@string/item_username" />
            </LinearLayout>
<!--            <ImageView-->
<!--                android:id="@+id/fav_true"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="60dp"-->
<!--                android:background="@drawable/border_image"-->
<!--                android:padding="8dp"-->
<!--                android:visibility="visible"-->
<!--                android:src="@drawable/ic_baseline_favorite_border_24"-->
<!--                app:tint="@color/colorPrimary"-->
<!--                android:contentDescription="@string/fav_true" />-->
<!--            <ImageView-->
<!--                android:id="@+id/fav_false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="60dp"-->
<!--                android:background="@drawable/border_image"-->
<!--                android:padding="8dp"-->
<!--                android:visibility="gone"-->
<!--                android:src="@drawable/ic_baseline_favorite_24"-->
<!--                app:tint="@color/colorPrimary"-->
<!--                android:contentDescription="@string/fav_false" />-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_company"
                    android:src="@drawable/ic_baseline_company_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/iv_company"
                    android:text="@string/company"
                    android:textSize="18sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_location"
                    android:src="@drawable/ic_baseline_location_on_24"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/iv_location"
                    android:textSize="18sp"
                    android:text="@string/location"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_githubaddress"
                    android:src="@drawable/ic_baseline_language_24"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tv_detail_githubaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/iv_githubaddress"
                    android:textSize="18sp"
                    android:text="@string/item_githubaddress"/>
            </RelativeLayout>
            </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:fabSize="normal"  />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="4dp">
            <TextView
                android:id="@+id/tv_detail_repositori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/dummy_data"/>
            <TextView
                android:id="@+id/tv_repositori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@id/tv_detail_repositori"
                android:textSize="18sp"
                android:text="@string/tv_repositori"/>

        </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/tv_detail_gists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/dummy_data" />
            <TextView
                android:id="@+id/tv_gists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@id/tv_detail_gists"
                android:textSize="18sp"
                android:text="@string/tv_gists"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_detail_follower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/dummy_data" />
                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@id/tv_detail_follower"
                    android:textSize="18sp"
                    android:text="@string/tv_follower"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="4dp">
                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/dummy_data" />
                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@id/tv_detail_following"
                    android:textSize="18sp"
                    android:text="@string/tv_following"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/black"/>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
